--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
   
     </section>
 
-    <script src="javascripts/mappa1951.js"></script>	
-    <script src="javascripts/mappa1961.js"></script>	  
-    <script src="javascripts/mappa1971.js"></script>	  
-    <script src="javascripts/mappa1981.js"></script>	    
+    <script src="javascripts/mappa.js"></script>	  
+    <script src="javascripts/avvia.js"></script>	    
   </body>
 </html>
