--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id="map1981" style="width: 100%;height:400px;"></div>
   
     </section>
-  
+    <script src="javascripts/barplot.js"></script>  
     <script src="javascripts/mappa.js"></script>	  
     <script src="javascripts/avvia.js"></script>	    
   </body>
