--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             type: 'bar'
         },
         title: {
-            text: 'Stacked bar chart'
+            text: 'Numero di stazioni per trentennio climatologico e per regione'
         },
         xAxis: {
             categories: ["abruzzo","areonautica","bolzano","calabria","emilia","friuli","lazio","liguria","lombardia","marche","sardegna","sicilia","toscana","trentino","umbria"]
@@ -64,7 +64,7 @@
         yAxis: {
             min: 0,
             title: {
-                text: 'Total fruit consumption'
+                text: 'Numero totale di serie'
             }
         },
         legend: {
