--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         plotOptions: {
             series: {
                 stacking: 'normal'
-            }
+            },
+            shadow: true
         },
         series: [
   {
