--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
       
     </script>  
     <script src="javascripts/mappa.js"></script>	  
-    <script src="javascripts/avvia.js"></script>	    
+    <script src="javascripts/avvia.js"></script>	
+    <script>
+        $(function(){
+          $('h3:even').css("font-weight","bold");
+          console.log("ciao");            
+        })
+
+
+    </script>  
   </body>
 </html>
