--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script>
         $(function(){
           $('h3:even').css("font-weight","bold");
-          alert("ciao");            
+          console.log("ciao");            
         });
 
 
