--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
     <script src="javascripts/avvia.js"></script>	
     <script>
         $(function(){
-          $('h3:even').css("font-weight","bold");
-          console.log("ciao");            
+          var titolo=$('h3:even');
+          debugger;
+                     
         });
 
 
