--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         },
         series: [
   {
-    name:   "1951",
+    name:   "1951-WMO",
     data: [ 0,26,42,108,28,63,23,102,47,45,210,79,220,31,33],
     stack: "strictlyWMO"
   },
@@ -101,7 +101,7 @@
     stack: "no_strictlyWMO"
   },
   {
-    name:  "1961",
+    name:  "1961-WMO",
     data: [0,32,40,111,30,62,31,78,49,42,189,72,206,31,23],
     stack: "strictlyWMO"
   },
@@ -111,7 +111,7 @@
     stack: "no_strictlyWMO"
   },  
   {
-    name: "1971",
+    name: "1971-WMO",
     data: [ 127,49,40,109, 30,70,22, 60, 27, 40, 182, 64, 157, 26, 0],
     stack: "strictlyWMO"
   },
@@ -121,7 +121,7 @@
     stack: "no_strictlyWMO"
   },    
   {
-    name:   "1981",
+    name:   "1981-WMO",
     data: [ 73, 33, 0,42, 24, 34, 0, 0, 0, 34, 164, 39, 11, 1, 0],
     stack: "strictlyWMO"
   },
