--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       $(function () {
     $('#container').highcharts({
         chart: {
-            type: 'bar'
+            type: 'column'
         },
         title: {
             text: 'Numero di stazioni per trentennio climatologico e per regione'
