--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       $(function () {
     $('#container').highcharts({
         chart: {
-            type: 'column'
+            type: 'column',
+            zoomType: 'xy'
         },
         title: {
             text: 'Numero di stazioni per trentennio climatologico e per regione'
