--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             type: 'column',
             zoomType: 'xy'
         },
+        colors: ['#eff3ff','#bdd7e7','#6baed6','#2171b5'],
         title: {
             text: 'Numero di stazioni per trentennio climatologico e per regione'
         },
