--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             type: 'column',
             zoomType: 'xy'
         },
-        colors: ['#eff3ff','#bdd7e7','#6baed6','#2171b5'],
+        colors: [['#eff3ff','#feedde'],['#bdd7e7','#fdbe85'],['#6baed6','#fd8d3c'],['#2171b5','#d94701']],
         title: {
             text: 'Numero di stazioni per trentennio climatologico e per regione'
         },
