--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             type: 'column',
             zoomType: 'xy'
         },
-        colors: ['#eff3ff','#feedde','#bdd7e7','#fdbe85','#6baed6','#fd8d3c','#2171b5','#d94701'],
+        colors: ['#a63603','#08519c','#e6550d','#3182bd','#fd8d3c','#6baed6','#fdbe85','#bdd7e7'],
         title: {
             text: 'Numero di stazioni per trentennio climatologico e per regione'
         },
