--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <script>
       function prova(){
         alert("WMO");
-        return true;
+        return false;
       }
     </script>
     <script src="javascripts/mappa.js"></script>	  
