--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         
         that.href= myLink[indice];
         
-        return true;
+        return false;
       }
     </script>
     <script src="javascripts/mappa.js"></script>	  
