--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         var colori=["#ABA","#123","#321"];
         
         //alert(document.getElementById("mya").childNodes[0].nodeValue);
-        alert($("#mya").text());
+        alert($("#mya").css("text-decoration","underline"));
         return false;
       }
     </script>
