--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     
       function cambiaUnderline(){
         
-        var myId=document.getElemenByID("mya");
+        var myId=document.getElementByID("mya");
         var myClass=myId.getAttribute("class");
         alert(myClass);
         var pos=myClass.indexOf("no");
