--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         alert(myClass);
         var pos=myClass.indexOf("no");
         
-        if(pos!=-1){
+        if(pos==-1){
           myId.css("text-decoration","none");
           myId.attr("class","no-underline");
         }else{
