--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           myId.style.textDecoration="none";
           myId.setAttribute("class","no-underline");
         }else{
-          myId.set.textDecoration="underline";
+          myId.style.textDecoration="underline";
           myId.setAttribute("class","underline");
         }
         
