--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       
       
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mappe dei valori normali 1951-1980</h3>
-<div id="map1951" style="width: 100%; height: 500px;"></div>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+  <span class="octicon octicon-link"></span></a>Mappe dei valori normali</h3>
+<div id="mappa" style="width: 100%; height: 500px;"></div>
 
 
   
