--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@
       <h3>
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>Mappe dei valori normali</h3>
-        <div id="mappa" style="width: 100%; height: 500px;"></div>
+
       </h3>
+
+         <select id="trentennio">
+           <option value="">--Select--</option>
+           <option value="1951">1951-1980</option>
+           <option value="1961">1961-1990</option>
+           <option value="1971">1971-2000</option>
+           <option value="1971">1981-2010</option>
+       </select>
+
+      <div id="mappa" style="width: 100%; height: 500px;"></div>
 
   
     </section>
