--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </h3>
 
         <form id="parform">
-          <input type="radio" name="parametro" value="pioggia">
-          <input type="radio" name="parametro" value="temperatura">
+          <input type="radio" name="parametro" value="pioggia" checked> Pioggia
+          <input type="radio" name="parametro" value="temperatura"> Temperatura
         </form>
 
          <select id="trentennio" form="parform">
@@ -60,9 +60,7 @@
            <option value="1971">1981-2010</option>
         </select>
         
-        <input type="radio">
-
-      <div id="mappa" style="width: 100%; height: 500px;"></div>
+        <div id="mappa" style="width: 100%; height: 500px;"></div>
 
   
     </section>
