--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
       </h3>
 
-        <form id="parform">
+        <form id="parametri">
           <input type="radio" name="parametro" value="pioggia" checked> Pioggia
           <input type="radio" name="parametro" value="temperatura"> Temperatura
         </form>
 
-         <select id="trentennio" form="parform">
+         <select id="trentennio" form="parametri">
            <option value="">--Select--</option>
            <option value="1951">1951-1980</option>
            <option value="1961">1961-1990</option>
