--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.2.1/highcharts.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.4.0/leaflet.markercluster.js"></script></script>
+  <style>
+    #container{
+      height: 400px;
+    }
+  </style>
+  
   </head>
 
   <body>
