--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     
       <h3>Mappe dei valori normali di temperatura media</h3>
 
-      <form>
+      <form id="dataform">
         <fieldset>
           <p>
-            <input name="parametro" type="radio" value="Pioggia"/>Pioggia<br/>
+            <input name="parametro" type="radio" value="Pioggia" checked="checked"/>Pioggia<br/>
             <input name="parametro" type="radio" value="Tmedia"/>Temperatura media<br/>
           </p>
           <p>
