--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <form id="dataform">
         <fieldset>
-          <p>
+          <p id="nome_parametro">
             <input name="parametro" type="radio" value="Pioggia" checked="checked"/>Pioggia<br/>
             <input name="parametro" type="radio" value="Tmedia"/>Temperatura media<br/>
           </p>
