--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       all'interno di ciascun mese (<b>WMO</b>) e tollerando un massimo di tre valori mancanti all'interno di ciascun mese.
       </p>  
     
-      <h3>Mappe dei valori normali di temperatura media</h3>
+      <h3>Mappe dei valori normali di precipitazione/temperatura</h3>
 
       <form id="dataform">
         <fieldset>
