--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <style>
       
       #dataform{
-        border-width: 0px;
+        border-width: 0px !important;
       }
       
     </style>
